--- a/src/components/Ingredient/Ingredient.css
+++ b/src/components/Ingredient/Ingredient.css
@@ -1,5 +1,4 @@
 .delete-button,.edit-button{
-    background-color: #A95006 ;
     box-shadow: 0px 0px 0px transparent;
     border: 0px solid transparent;
     text-shadow: 0px 0px 0px transparent;
