--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,9 +1,5 @@
-html {
-    background-color: rgb(241, 60, 60);
-   
-}
 
 .home-controls a, .home-controls a:hover, .home-controls a:focus, .home-controls a:active {
     
-    color: white;
+    color: black;
 }
