--- a/src/pages/KitchenPage/KitchenPage.css
+++ b/src/pages/KitchenPage/KitchenPage.css
@@ -7,14 +7,14 @@
     border: 0px solid transparent;
     text-shadow: 0px 0px 0px transparent;
     margin-bottom: 10px;
-    color: white;
-    font-family: 'Playfair Display SC', serif;
+    font-weight: bold;
+
     margin-right: 10%;
     margin-left: 10%;
   }
   .kitchen-controls li a, .kitchen-controls li a:hover, .kitchen-controls li a:focus, .kitchen-controls li a:active {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 .kitchen-controls{
   list-style-type: none;
